[build-system]
requires = ["maturin>=1.0", "setuptools", "wheel"]
build-backend = "maturin"

[project]
name = "py_ark_vrf"
version = "0.2.1"
description = "Python bindings for ark-vrf"
authors = [
    { name = "Prasad", email = "prasad@chainscore.finance" },
]
dependencies = []
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/chainscore/py-ark-vrf"
"Bug Tracker" = "https://github.com/chainscore/py-ark-vrf/issues"
